--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Reports and shapefile generation for OSM derived global administrative boundaries.
+
+
+
 Step 1: Install prerequisites
 postgresql, postgis, java, osmosis, gdal, ant, git
 
